FEAT: Seeders y agregar tabla Frontend - Migraciones y modelos para las tablas departments, municipalities, locations, type_people, type_positions, person_publics, search_logs, search_log_person_publics - Seeders para las tablas departments, municipalities, locations, type_people, type_positions y person_publics - Agregar el comando seed:fresh en el composer.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "private": true,
     "dependencies": {
+        "annyang": "^2.6.1",
+        "sweetalert2": "^11.7.3",
         "vue": "^3.2.36"
     },
     "devDependencies": {
