--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "seed:fresh": "php artisan migrate:fresh --seed"
     },
     "extra": {
         "laravel": {
